-Changed the background color and removed the Timer TextView widget. -Also updated strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
 
     <string name="app_name">Shogi Game</string>
     <string name="run_test">Run Test</string>
+    <string name="language">English/Japanese</string>
+    <string name="game_name">Shogi</string>
+    <string name="quit">Quit</string>
+    <string name="currentTurn">Current Turn:</string>
+    <string name="currTurnBar"> </string>
 </resources>
