Implemented the timer for each player in the game. Also updated strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="quit">Quit</string>
     <string name="currentTurn">Current Turn:</string>
     <string name="currTurnBar"> </string>
+    <string name="timeRemaining">Time Remaining</string>
 </resources>
