Added more string values in strings.xml, avoided some string literals in ShogiHumanPlayer.java by using the string values from strings.xml, and formatted code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="currentTurn">Current Turn:</string>
     <string name="currTurnBar"> </string>
     <string name="timeRemaining">Time Remaining</string>
+    <string name="player1">Player 1</string>
+    <string name="player2">Player 2</string>
+    <string name="waiting">Waiting…</string>
 </resources>
